--- a/user_app/templates/list_item.html
+++ b/user_app/templates/list_item.html
@@ -14,8 +14,8 @@
     {% for item in items %}
         <li>
             <strong>{{ item.title }}</strong> - {{ item.description }}
-            <a href="{% url 'item_update' item.pk %}">Edit</a>
-            <a href="{% url 'item_delete' item.pk %}">Delete</a>
+            <a href="{% url 'update' item.pk %}">Edit</a>
+            <a href="{% url 'delete' item.pk %}">Delete</a>
         </li>
     {% empty %}
         <li>No items yet.</li>
